@@ -5,6 +5,7 @@ Version: 1.1.21
     - Fixed crash that occurred when parsing blank technologies
   Changes:
     - MARV now creates pollution while running
+    - Updated compatibility for Obelisks of Light mod
   Features:
     - Added "Easy Mode" setting that simplifies recipes and adds early game transmutation recipes
     - Added /tibPauseGrowth command to toggle Tiberium growth
